--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
+# Gradle Settings
+org.gradle.jvmargs='-Dfile.encoding=UTF-8'
+
 # API Versions
-spigotVersion=1.19.4
-guiVersion=1.1.3.10-SNAPSHOT
-gardenVersion=1.2.3
+spigotVersion=1.20.1
+gardenVersion=1.2.5
